--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "leave-tracker": {
+    "time-tracker": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/leave-tracker",
+            "outputPath": "dist/time-tracker",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,19 +59,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "leave-tracker:build",
+            "browserTarget": "time-tracker:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "leave-tracker:build:production"
+              "browserTarget": "time-tracker:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "leave-tracker:build"
+            "browserTarget": "time-tracker:build"
           }
         },
         "test": {
@@ -106,7 +106,7 @@
         }
       }
     },
-    "leave-tracker-e2e": {
+    "time-tracker-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -115,11 +115,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "leave-tracker:serve"
+            "devServerTarget": "time-tracker:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "leave-tracker:serve:production"
+              "devServerTarget": "time-tracker:serve:production"
             }
           }
         },
@@ -135,5 +135,5 @@
       }
     }
   },
-  "defaultProject": "leave-tracker"
+  "defaultProject": "time-tracker"
 }
